# Elmasmust

./: README.md
01_encoder/: .gitignore  CODES.md  Cargo.toml  Makefile  README.md  functions.js  index.html  justfile  main.css  main.js
01_encoder/scripts/: after_build.sh  before_build.sh  build.sh  clean.sh  run.sh  setup.sh
01_encoder/src/: action.rs  cmd.rs  dispatcher.rs  lib.rs  macros.rs
01_encoder/src/actions/: md5.rs  sha1.rs  sha256.rs  sha512.rs
