[package]
name = "sha2encoder"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"



[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.76", features = ["serde-serialize"] }
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
cfg-if = "1.0.0"
sha2 = "0.9.6"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
sha-1 = "0.9.8"
md-5 = "0.9.1"

# [dependencies.web-sys]
# version = "0.3.53"
# features = [
#   'Document',
#   'Element',
#   'HtmlElement',
#   'Node',
#   'Window',
# ]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

# Profiles

[profile.dev]
opt-level        = 0
lto              = false
debug            = true
debug-assertions = true

[profile.release]
opt-level        = "z" # Try with 's' too
lto              = true
debug            = false
debug-assertions = false

[profile.bench]
opt-level        = 3
lto              = true
debug            = false
debug-assertions = false

[profile.test]
opt-level        = 0
lto              = false
debug            = true
debug-assertions = true
