[package]
name = "sha2encoder"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
cfg-if = "1.0.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sha-1 = "0.10.0"
sha2 = "0.10.2"
md-5 = "0.10.1"
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
wee_alloc = { version = "0.4.5", optional = true }
# [dependencies.web-sys]
# version = "0.3.53"
# features = [
#   'Document',
#   'Element',
#   'HtmlElement',
#   'Node',
#   'Window',
# ]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

# Profiles

[profile.dev]
opt-level = 0
lto = false
debug = true
debug-assertions = true

[profile.release]
opt-level = "z"          # Try with 's' too
lto = true
debug = false
debug-assertions = false

[profile.bench]
opt-level = 3
lto = true
debug = false
debug-assertions = false

[profile.test]
opt-level = 0
lto = false
debug = true
debug-assertions = true
